--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -9,7 +9,6 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Height="713.667" Width="1176.667">
 
 
-
     <Grid Margin="0,10,9.8,0.6" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="192*"/>
@@ -19,8 +18,8 @@
         <ProgressRing x:Name="ProgressRing" HorizontalAlignment="Left" Height="77" Margin="290,515,0,0" VerticalAlignment="Top" Width="179" Background="#03FFFFFF" Foreground="Red" FocusVisualSecondaryBrush="#99F90505" FocusVisualPrimaryBrush="#FF7F1F1F" Grid.Column="1"/>
 
 
+        <GridView x:Name="GridViewSell" IsItemClickEnabled="True" IsSwipeEnabled="true" SelectionMode="Single" Margin="127,59,421,384" Grid.ColumnSpan="2">
 
-        <GridView x:Name="GridViewSell" IsItemClickEnabled="True" IsSwipeEnabled="true" SelectionMode="Single" Margin="127,35,421,380" Height="288" Grid.ColumnSpan="2">
             <GridView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapGrid Orientation="Horizontal"/>
@@ -43,16 +42,10 @@
                     </Grid>
                 </DataTemplate>
             </GridView.ItemTemplate>
-
-
-
-
         </GridView>
 
 
-
-
-        <GridView x:Name="GridViewBuy" IsItemClickEnabled="True" IsSwipeEnabled="true" SelectionMode="Single" Margin="127,367,421,47" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0,10,0,10">
+        <GridView x:Name="GridViewBuy" IsItemClickEnabled="True" IsSwipeEnabled="true" SelectionMode="Single" Margin="127,387,421,56" Grid.ColumnSpan="2" BorderThickness="0,10,0,10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
             <GridView.ItemsPanel>
                 <ItemsPanelTemplate>
@@ -298,10 +291,16 @@
         <Button x:Name="searchButton" Content="Search&#xD;&#xA;" HorizontalAlignment="Left" Height="49" Margin="411,585,0,0" VerticalAlignment="Top" Width="147" Click="searchButton_Click" FontSize="20" FontWeight="Bold" Grid.Column="1"/>
         <Button x:Name="restoreButton" Content="Restore Item List" HorizontalAlignment="Left" Margin="204,585,0,0" VerticalAlignment="Top" Height="49" Width="176" FontSize="20" FontWeight="Bold" Click="restoreButton_Click" Grid.Column="1"/>
         <GridView HorizontalAlignment="Left" VerticalAlignment="Top" Width="100"/>
-        <Border x:Name="Sell_border" BorderBrush="Black" HorizontalAlignment="Left" Height="288" Margin="127,35,0,0" VerticalAlignment="Top" Width="623" RequestedTheme="Dark" BorderThickness="3,3,3,3" Grid.ColumnSpan="2"/>
-        <Border x:Name="Buy_border" BorderBrush="Black" HorizontalAlignment="Left" Height="289" Margin="127,367,0,0" VerticalAlignment="Top" Width="623" BorderThickness="3,3,3,3" RequestedTheme="Dark" Grid.ColumnSpan="2"/>
-        <TextBlock x:Name="Sell_label" HorizontalAlignment="Left" Margin="32,59,0,0" Text="Sell offers:" TextWrapping="Wrap" VerticalAlignment="Top" Height="24" Width="80"/>
-        <TextBlock x:Name="Buy_label" HorizontalAlignment="Left" Margin="32,387,0,0" Text="Buy offers:" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" Width="83"/>
+        <Border x:Name="Sell_border" BorderBrush="Black" HorizontalAlignment="Left" Height="260" Margin="127,59,0,0" VerticalAlignment="Top" Width="623" RequestedTheme="Dark" BorderThickness="3,3,3,3" Grid.ColumnSpan="2"/>
+        <Border x:Name="Buy_border" BorderBrush="Black" HorizontalAlignment="Left" Height="260" Margin="127,387,0,0" VerticalAlignment="Top" Width="623" BorderThickness="3,3,3,3" RequestedTheme="Dark" Grid.ColumnSpan="2"/>
+        <TextBlock x:Name="Sell_label" HorizontalAlignment="Left" Margin="32,59,0,0" Text="Sell to:" TextWrapping="Wrap" VerticalAlignment="Top" Height="24" Width="80"/>
+        <TextBlock x:Name="Buy_label" HorizontalAlignment="Left" Margin="32,387,0,0" Text="Buy from:" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" Width="83"/>
+        <TextBlock x:Name="Sell_item_name" HorizontalAlignment="Left" Margin="171,24,0,0" Text="Name" TextWrapping="Wrap" VerticalAlignment="Top"/>
+        <TextBlock x:Name="Sell_item_id" HorizontalAlignment="Left" Margin="365,24,0,0" Text="Type ID" TextWrapping="Wrap" VerticalAlignment="Top"/>
+        <TextBlock x:Name="Sell_price" HorizontalAlignment="Left" Margin="566,24,0,0" Text="Price" TextWrapping="Wrap" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <TextBlock x:Name="Buy_item_name" HorizontalAlignment="Left" Margin="171,356,0,0" Text="Name" TextWrapping="Wrap" VerticalAlignment="Top"/>
+        <TextBlock x:Name="Buy_item_id" HorizontalAlignment="Left" Margin="365,356,0,0" Text="Type ID" TextWrapping="Wrap" VerticalAlignment="Top"/>
+        <TextBlock x:Name="Buy_price" HorizontalAlignment="Left" Margin="566,356,0,0" Text="Price" TextWrapping="Wrap" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
 
     </Grid>
 </Page>
